--- a/index.html
+++ b/index.html
@@ -18,65 +18,7 @@
       min-height: 100vh;
       background-color: #f5f5f5;
     }
-    .login-page {
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #f5f5f5;
-    }
 
-    .login-form {
-      width: 350px;
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .login-form h2 {
-      text-align: center;
-      margin-bottom: 1.5rem;
-      color: #333;
-    }
-
-    .login-form label {
-      font-size: 1rem;
-      margin-bottom: 0.5rem;
-      color: #333;
-      display: block;
-    }
-
-    .login-form input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-
-    .login-form button {
-      width: 100%;
-      padding: 10px;
-      background-color: #ff6347;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 1rem;
-    }
-
-    .login-form button:hover {
-      background-color: #e55340;
-    }
-
-    /* Dashboard styles */
-    .dashboard {
-      display: none;
-    }
-
-    /* Sidebar styles */
     .sidebar {
       width: 20%;
       background-color: #FDEAEF;
@@ -142,7 +84,6 @@
       border-radius: 50%;
     }
 
-    /* Card */
     .summary-cards {
       display: flex;
       justify-content: space-around;
@@ -157,19 +98,6 @@
       border-radius: 8px;
       text-align: center;
       cursor: pointer;
-    }
-
-    .chart-container {
-      display: flex;
-      justify-content: space-between;
-      gap: 2rem;
-      margin-bottom: 1.5rem;
-    }
-
-    .chart, .pie-chart, .transactions, .saving-goals {
-      background-color: #f5f5f5;
-      padding: 1rem;
-      border-radius: 8px;
     }
 
     .card:hover .expand {
@@ -220,6 +148,7 @@
     background-color: #e55340;
   }
 
+  /* Dark Mode Styles */
   /* Dark Mode Styles */
   body.dark-mode {
     background-color: #1e1e1e; /* Darker background for night mode */
@@ -431,21 +360,7 @@
   </style>
 </head>
 <body>
-    <!-- Login Page -->
-  <div class="login-page">
-    <div class="login-form">
-      <h2>Login</h2>
-      <label for="username">Username</label>
-      <input type="text" id="username" placeholder="Enter your username" required>
 
-      <label for="password">Password</label>
-      <input type="password" id="password" placeholder="Enter your password" required>
-
-      <button id="loginBtn">Login</button>
-    </div>
-  </div>
-
-  <!-- Finance Dashboard -->
   <div class="sidebar">
     <h2><img src="munim.webp" alt="Logo"> Munim</h2>
     <button><i class="fas fa-tachometer-alt"></i>Dashboard</button>
@@ -469,7 +384,7 @@
 
   <div class="main-content">
     <div class="header">
-      <h1>Welcome,User </h1>
+      <h1>Welcome, Ashish Singh</h1>
       <img src="profile.png" alt="Profile Picture">
     </div>
 
@@ -598,18 +513,6 @@
 
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script>
-    // Login functionality
-    const loginBtn = document.getElementById('loginBtn');
-    loginBtn.addEventListener('click', function() {
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-
-      if (username && password) {
-        document.querySelector('.login-page').style.display = 'none';
-        document.querySelector('.dashboard').style.display = 'flex';
-
   <!-- Chart.js Library -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
@@ -631,7 +534,7 @@
           }
         ]
       }
-      });
+    });
 
     const ctx = document.getElementById('pieChart').getContext('2d');
         const pieChart = new Chart(ctx, {
@@ -697,3 +600,4 @@
   </script>
 </body>
 </html>
+
